# cs330_week3

./: .gitignore  CMakeLists.txt
CS330_App/: CMakeLists.txt
CS330_App/include/: application.h  camera.h  mesh.h  shader.h  types.h
CS330_App/shaders/: basic_shader.vert
CS330_App/src/: application.cpp  mesh.cpp  shader.cpp
